<resources>
    <string name="app_name">ShoeStoreInventoryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_store_inventory">Shoe Store Inventory</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="e_mail">E-mail</string>
    <string name="welcome_n_to_n_shoe_store_inventory">Welcome \n to \n Shoe Store Inventory</string>
    <string name="let_s_explore_our_inventory">Let\'s explore our inventory</string>
    <string name="next">Next</string>
    <string name="_2_press_the_button_on_the_bottom_right_corner_to_add_new_shoes_to_the_list">2. Press the button on the bottom right corner to add new shoes to the list</string>
    <string name="_1_press_the_three_dots_in_the_upper_right_corner_to_logout">1. Press the three dots in the upper right corner to Logout</string>
    <string name="next2">next</string>
    <string name="instructions">Instructions</string>
    <string name="enter_shoe_s_details">Enter Shoe\'s Details</string>
    <string name="description">Description</string>
    <string name="product_name">Product Name</string>
    <string name="size">Size</string>
    <string name="description1">Description</string>
    <string name="company">Company</string>
    <string name="enter_size">Enter size</string>
    <string name="enter_shoe_s_name">Enter Shoe\'s Name</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>